--- a/main.html
+++ b/main.html
@@ -7,7 +7,27 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<form>
+	<input type = "text"    id = "name" placeholder = "Name" />
+<br>
+	
+	<input type = "number"  id = "phone" placeholder = "Phone Number"/>
+<br>
+		
+	<input type = "text"    id = "address" placeholder = "Address"/>
+<br>
+	<input type ="checkbox" id = "checkbox" value = "Have you ever lived with a Dog before?"/>
+   <br>
+		<select id = "multiSelect" multiple> 
+		<option>labrador</option>
+		<option>pug</option>
+		<option>german shepherd</option>
+		<option>pitbull</option>
+    </select>
+		<br>
+
+	<input type = "submit" id = "submit" value = "Submit"/>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
