--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 	<input type = "text"    id = "name" placeholder = "Name" />
 <br>
 	
-	<input type = "number"  id = "phone" placeholder = "Phone Number"/>
+	<input type = "text"  id = "phone" placeholder = "Phone Number"/>
 <br>
 		
 	<input type = "text"    id = "address" placeholder = "Address"/>
