--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 		
 	<input type = "text"    id = "address" placeholder = "Address"/>
 <br>
-	<input type ="checkbox" id = "checkbox" value = "Have you ever lived with a Dog before?"/>
+	<input type ="checkbox" id = "checkbox" value = "Have you ever lived with a Dog before?"/>Have you ever lived with a Dog before?
    <br>
 		<select id = "multiSelect" multiple> 
 		<option>labrador</option>
